fixed styles to better contrast between elements

--- a/src/styles/Design.css
+++ b/src/styles/Design.css
@@ -10,7 +10,8 @@
 .design > .container > p {
   max-width: 100%;
   margin: 0 auto 30px;
-  color: #aaa;
+  color: #fff;
+  opacity: 0.8;
   font-size: clamp(14px, 4vw, 18px);
 }
 
